src/test/ui/arg-type-mismatch-issue-85527.stderr
error[E0432]: unresolved import `foo`
  --> $DIR/arg-type-mismatch-issue-85527.rs:2:5
   |
LL | use foo::foo;
   |     ^^^ maybe a missing crate `foo`?

error[E0308]: mismatched types
  --> $DIR/arg-type-mismatch-issue-85527.rs:13:16
   |
LL |     use_string(make_cow());
   |                ^^^^^^^^^^
   |                |
   |                expected struct `String`, found enum `Cow`
   |                help: try using a conversion method: `make_cow().to_string()`
   |
   = note: expected struct `String`
                found enum `Cow<'static, str>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0432.
For more information about an error, try `rustc --explain E0308`.
